# pentago

./: .bazelrc  .dockerignore  .gitignore  .swp  CLAUDE.md  Dockerfile  LICENSE  MODULE.bazel  Makefile  README.md  SConscript  WORKSPACE  __init__.py  aligned.cpp  aligned.h  all_boards.cpp  all_boards.h  analyze  analyze.cpp  ashelve.py  block_cache.cpp  block_cache.h  board.cpp  board.h  compress.cpp  compress.h  control  convert.cpp  convert.h  count.cpp  count.h  dihedral  distance.cpp  distance.h  docker-compose.yml  draw-history  endgame  endgame.cpp  endgame.h  engine.cpp  (+47 more)
.claude/: settings.json
base/: all_boards.cpp  all_boards.h  board.cpp  count.cpp  count.h  dihedral  hash.cpp  hash.h  moves.cpp  moves.h  precompute.py  score.cpp  score.h  section.cpp  section.h  superscore.cpp  superscore.h  symmetry.cpp  symmetry.h  test_all_boards.py  test_pentago.py  test_super.py
data/: BUILD  block_cache.cpp  block_cache.h  compress.cpp  compress.h  counts-0.npy  counts-1.npy  counts-10.npy  counts-11.npy  counts-12.npy  counts-13.npy  counts-14.npy  counts-15.npy  counts-16.npy  counts-17.npy  counts-18.npy  counts-19.npy  counts-2.npy  counts-20.npy  counts-21.npy  counts-22.npy  counts-23.npy  counts-24.npy  counts-25.npy  counts-26.npy  counts-27.npy  counts-28.npy  counts-29.npy  counts-3.npy  counts-30.npy  counts-31.npy  counts-32.npy  counts-33.npy  counts-34.npy  counts-35.npy  counts-4.npy  counts-5.npy  counts-6.npy  counts-7.npy  counts-8.npy  (+22 more)
end/: block_store.cpp  block_store.h  check  check.cpp  check.h  compacting_store.cpp  compacting_store.h  compute.cpp  compute.h  config.h  draw-history  fast_compress.cpp  fast_compress.h  history.cpp  history.h  line.cpp  line.h  load_balance.cpp  load_balance.h  partition.cpp  partition.h  predict  predict.cpp  predict.h  random_partition.cpp  random_partition.h  reduction.h  sections.cpp  sections.h  simple_partition.cpp  simple_partition.h  sparse_store.cpp  sparse_store.h  store_block_cache.cpp  store_block_cache.h  test_end.py
ios/: speed.txt
learn/: .gitignore  batching.py  beam-estimate  beam.py  bernoulli.py  boards.py  datasets.py  equivariant.py  plan-beam  plan_beam.py  plan_subsample.py  plot  pyproject.toml  run-beam  run-subsample  semicache.py  setup.py  subsample.py  supertensors.py  symmetry.py  tables.py  test  test_batching.py  test_beam.py  test_boards.py  test_datasets.py  test_equivariant.py  test_semicache.py  test_subsample.py  test_supertensors.py  test_symmetry.py  trace.py  train  train.py
mpi/: .gitignore  SConscript  block_store.cpp  block_store.h  check  check.cpp  (+49 more)
(+1848 files in other folders)
