module(
    name = "pentago",
    version = "0.0.0",
)

# BCR dependencies
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", repo_name = "com_google_googletest")
single_version_override(
    module_name = "googletest",
    version = "1.17.0.bcr.2",
    patches = ["//third_party:googletest_char8t.patch"],
    patch_strip = 1,
)
bazel_dep(name = "zlib", version = "1.3.1.bcr.8")
bazel_dep(name = "xz", version = "5.4.5.bcr.8", repo_name = "lzma")
bazel_dep(name = "snappy", version = "1.2.2.bcr.3")
bazel_dep(name = "curl", version = "8.12.0")
single_version_override(
    module_name = "curl",
    version = "8.12.0",
    patches = ["//third_party:curl_warnings.patch"],
    patch_strip = 1,
    patch_cmds = [
        # Apply BUILD.bazel changes via system patch (Bazel's native ctx.patch
        # fails on this file; system patch handles the 0-context hunks correctly).
        """patch -p1 << 'PATCHEOF'
--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -302 +302 @@
-            "@platforms//os:macos": _BASE_CURL_COPTS,
+            "@platforms//os:macos": _BASE_CURL_COPTS + ["-DHAVE_SNPRINTF=1", "-Werror"],
@@ -305,0 +306,2 @@
+                "-DHAVE_SNPRINTF=1",
+                "-Werror",
PATCHEOF""",
    ],
)
bazel_dep(name = "boringssl", version = "0.20260327.0")
single_version_override(
    module_name = "boringssl",
    version = "0.20260327.0",
    patches = ["//third_party:boringssl_macos_arm_crypto.patch"],
    patch_strip = 1,
)

# Non-BCR dependencies
bazel_dep(name = "bazel_skylib", version = "1.8.2")
deps = use_extension("//third_party:deps.bzl", "deps")
use_repo(deps, "random123", "tinyformat")

# System MPI
mpi = use_extension("//third_party:mpi.bzl", "mpi_ext")
use_repo(mpi, "mpi")
